# scorum

libraries/app/: application.cpp
libraries/app/include/scorum/app/: application.hpp
libraries/chain/: CMakeLists.txt
libraries/chain/database/: database.cpp  scheduled_snapshot.cpp
libraries/chain/database/block_tasks/: block_tasks.cpp
libraries/chain/hardfork.d/: 0-preamble.hf
libraries/chain/include/scorum/chain/: database_exceptions.hpp
libraries/chain/include/scorum/chain/database/: database.hpp  scheduled_snapshot.hpp  snapshot_finder_for_types.hpp  snapshot_types.hpp
libraries/plugins/account_by_key/: account_by_key_plugin.cpp
libraries/plugins/account_statistics/: CMakeLists.txt  account_statistics_plugin.cpp
libraries/plugins/blockchain_history/: CMakeLists.txt  blockchain_history_plugin.cpp
libraries/plugins/blockchain_monitoring/: CMakeLists.txt  blockchain_monitoring_plugin.cpp
libraries/plugins/tags/: CMakeLists.txt  tags_plugin.cpp
libraries/plugins/tags/include/scorum/tags/: snapshot_types.hpp  tags_objects.hpp
libraries/plugins/witness/: witness_plugin.cpp
libraries/snapshot/include/scorum/snapshot/: get_types_by_id.hpp  loader.hpp  plugin_connector.hpp  saver.hpp
libraries/typeid/include/scorum/typeid/: get_types.hpp
programs/scorumd/: main.cpp
tests/chain_tests/: CMakeLists.txt
tests/chain_tests/snapshot/: snapshot_plugins_tests.cpp  snapshot_tests.cpp
tests/common/: database_integration.cpp
tests/utests/: CMakeLists.txt  any_cast_tests.cpp  pack_unpack_reflected_obj_tests.cpp
(+10 files in other folders)
